--- a/.github/workflows/AutoBuild-p2w_r619ac-128m.yml
+++ b/.github/workflows/AutoBuild-p2w_r619ac-128m.yml
@@ -4,7 +4,7 @@
 #   Author: Hyy2001X                                      #
 ###########################################################
 
-name: p2w_r619ac-128m
+name: P&W_R619AC
 
 ### 以下内容请保持不变 (请修改下方: 环境变量设置)
 on:
@@ -20,8 +20,8 @@ on:
   #  branches: 
   #    - master
 
-  #schedule:
-  #  - cron: 0 8 * * 5
+  schedule:
+    - cron: 0 8 * * 5
 
   #watch:
   #  types: [started]
