--- a/.github/workflows/AutoBuild-xiaomi_redmi-router-ac2100.yml
+++ b/.github/workflows/AutoBuild-xiaomi_redmi-router-ac2100.yml
@@ -4,7 +4,7 @@
 #   Author: Hyy2001X                                      #
 ###########################################################
 
-name: P&W R619AC 128M
+name: Redmi AC2100
 
 ### 以下内容请保持不变 (请修改下方的 环境变量设置)
 on:
@@ -32,7 +32,7 @@ on:
 ### 环境变量设置
 env:
 # 编译时调用的 [.config] 文件名称
-  CONFIG_FILE: p2w_r619ac-128m
+  CONFIG_FILE: xiaomi_redmi-router-ac2100
 # 源码仓库:分支
   DEFAULT_SOURCE: coolsnowwolf/lede:master
 # 上传固件到 Github Releases
