--- a/.github/workflows/Module-Refresh_API.yml
+++ b/.github/workflows/Module-Refresh_API.yml
@@ -1,24 +1,23 @@
 ###########################################################
-#   Description: Compile OpenWrt by GitHub Actions        #
-#   Based on: https://github.com/P3TERX/Actions-OpenWrt   #
+#   Description: Refresh Release API                      #
 #   Author: Hyy2001X                                      #
 ###########################################################
 
-name: Refresh_API
+name: Refresh API
 
 on:
   repository_dispatch:
   workflow_dispatch:
     inputs:
       refresh_switch:
-        description: '刷新 Release/API'
+        description: '手动刷新 API'
         default: 'true'
 
   schedule:
     - cron: 0 4,16 * * *
 
 jobs:
-  build:
+  Job:
     runs-on: ubuntu-latest
     
     steps:
