--- a/.github/workflows/Module-Synchronise_Forks.yml
+++ b/.github/workflows/Module-Synchronise_Forks.yml
@@ -1,11 +1,11 @@
 ############################################################
-#   Description: GitHub Action to synchronise forks        #
+#   Description: GitHub Action to Synchronise Forks        #
 #   Based on: danshui-git/github-forks-sync-action.git     #
 #   Modify: Hyy2001X                                       #
 #   Thanks to: https://github.com/281677160                #
 ############################################################
 
-name: Synchronise Fork
+name: Synchronise Forks
 
 on:
   repository_dispatch:
@@ -19,14 +19,14 @@ env:
   SCRIPT_FILE: Scripts/Sync.sh
 
 jobs:
-  build:
+  Job:
     runs-on: ubuntu-latest
     
     steps:
     - name: Checkout
       uses: actions/checkout@main
 
-    - name: Run synchronise script
+    - name: Run Synchronise Script
       run: |
         [ "${{github.event.inputs.sync_mode}}" == true ] && {
             bash $GITHUB_WORKSPACE/Scripts/Sync.sh ${{secrets.GITHUB_TOKEN}} ${{github.repository}} --sync-all
